# sur-projekt

./: .gitignore  download_and_extract_data.sh  image.ipynb  zadani.txt
SRC/: facial_recognition_results.txt  image.ipynb
SRC/sound/: README.md
SRC/sound/src/classifier/: gmm.rs
SRC/sound/src/input/: mfcc.rs
sound/: Cargo.toml  README.md  prepare_data.sh  validate.sh
sound/src/: classifier.rs  gmm.rs  gmm_test_data.rs  input.rs  main.rs
sound/src/classifier/: gmm.rs
sound/src/input/: mfcc.rs
