[package]
name = "sound"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
hound = "3.5.1"
ndarray = "0.16.1"
ndrustfft = "0.5.0"
plotters = {version = "0.3.7", default-features = false, features = ["svg_backend", "line_series", "point_series"]}
rand = "0.9.1"
rand_distr = "0.5.1"
